# textmining_grp6

./: .gitattributes  .gitignore  CLAUDE.md  README.md  data_extraction.ipynb  modern-viz.skill  pyproject.toml  requirements.txt
Data/: Alphabet Inc._10-Q_2025-09-30T00_00_00_English_MDA.txt  Amazon.com, Inc._10-Q_2025-09-30T00_00_00_English_MDA.txt  Apple Inc._10-Q_2025-12-27T00_00_00_English_MDA.txt  Microsoft Corporation_10-Q_2025-12-31T00_00_00_English_MDA.txt  NVIDIA Corporation_10-Q_2025-10-26T00_00_00_English_MDA.txt
Data Preparation/: TechCompanyByMarketCap.csv  TechCompanyByMarketCap_withCIK.csv  Text_Cleaning.ipynb  mda_extraction.ipynb  mda_processed_sample.xlsx  mda_splitter.ipynb  nvidia_original_sent.xlsx  text_preprocessing.ipynb  text_preprocessing_v2.ipynb
DataProcessing/: data_preprocessing.ipynb
MDA/: 1-800-PetMeds_10-K_2020-05-26_MDA.txt  1-800-PetMeds_10-K_2021-05-25_MDA.txt  1-800-PetMeds_10-K_2022-05-24_MDA.txt  1-800-PetMeds_10-K_2023-05-23_MDA.txt  1-800-PetMeds_10-K_2024-06-14_MDA.txt  1-800-PetMeds_10-K_2025-10-14_MDA.txt  1-800-PetMeds_10-Q_2020-01-28_MDA.txt  1-800-PetMeds_10-Q_2020-08-03_MDA.txt  1-800-PetMeds_10-Q_2020-11-03_MDA.txt  1-800-PetMeds_10-Q_2021-01-26_MDA.txt  1-800-PetMeds_10-Q_2023-08-02_MDA.txt  1-800-PetMeds_10-Q_2023-10-31_MDA.txt  1-800-PetMeds_10-Q_2024-04-15_MDA.txt  1-800-PetMeds_10-Q_2024-08-07_MDA.txt  1-800-PetMeds_10-Q_2024-11-07_MDA.txt  1-800-PetMeds_10-Q_2025-02-10_MDA.txt  1-800-PetMeds_10-Q_2025-12-19_MDA.txt  3D_Systems_10-K_2015-02-26_MDA.txt  3D_Systems_10-K_2016-03-14_MDA.txt  (+17952 more)
webapp/: app-dev.py  (+6 more)
(+20257 files in other folders)
